Add warbear (dev only)

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -342,6 +342,11 @@ commands:
   Viking:
     description: Selects the viking kit
     usage: /viking
+  Warbear:
+    description: Selects the warbear kit
+    usage: /warbear
+    permission: castlesiege.developer
+    permission-message: ʕ•ᴥ•ʔ
   Warhound:
     description: Selects the warhound kit
     usage: /warhound
