Map Specific kits (still working on making this look appealing)

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -309,6 +309,12 @@ commands:
   Halberdier:
     description: Selects the halberdier kit
     usage: /halberdier
+  HelmsdeepLancer:
+    description: Selects the Lancer kit on Helm's Deep
+    usage: /helmsdeeplancer
+  HelmsdeepRangedCavalry:
+    description: Selects the Ranged Cavalry kit on Helm's Deep
+    usage: /helmsdeeprangedcavalry
   Ladderman:
     description: Selects the ladderman kit
     usage: /ladderman
