--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -359,6 +359,43 @@ team:
   name: "§2Team Kits"
   key: "team"
   items:
+    lancer:
+      name: "§a§lCLASS:§r§a Lancer"
+      material: "STICK"
+      lore:
+        - "§6------------------------------"
+        - "§2[Desc]:§a Cavalry that can use spears!"
+        - "§2[Health]:§a 170"
+        - "§2[Melee Damage]:§a 25.5"
+        - "§2[Regen]:§a 5"
+        - "§2[Ability]:§a Right click the wheat to mount your horse."
+        - "§2[Ability]:§a Spears can be thrown by right-clicking."
+        - "§2[Status]:§a Unlocked with coins."
+        - "§6------------------------------"
+        - "&5MAP: Helm's Deep"
+        - "&5TEAM: &2Rohan"
+      location: 0
+      command: "HelmsdeepLancer"
+      map: "Helm's Deep"
+      team: "Rohan"
+    ranged_cavalry:
+      name: "§a§lCLASS:§r§a Ranged Cavalry"
+      material: "STICK"
+      lore:
+        - "§6------------------------------"
+        - "§2[Desc]:§a Cavalry that can use a bow and sword!"
+        - "§2[Health]:§a 130"
+        - "§2[Melee Damage]:§a 19.5"
+        - "§2[Regen]:§a 5"
+        - "§2[Ability]:§a Right click the wheat to mount your horse."
+        - "§2[Status]:§a Unlocked with coins."
+        - "§6------------------------------"
+        - "&5MAP: Helm's Deep"
+        - "&5TEAM: &2Rohan"
+      location: 1
+      command: "HelmsdeepRangedCavalry"
+      map: "Helm's Deep"
+      team: "Rohan"
     back:
       name: "§4§lGo Back"
       material: "BARRIER"
