--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -372,15 +372,15 @@ team:
         - "§2[Ability]:§a Spears can be thrown by right-clicking."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&5MAP: Helm's Deep"
-        - "&5TEAM: &2Rohan"
+        - "§5MAP: Helm's Deep"
+        - "§5TEAM: §2Rohan"
       location: 0
       command: "HelmsdeepLancer"
       map: "Helm's Deep"
       team: "Rohan"
     ranged_cavalry:
       name: "§a§lCLASS:§r§a Ranged Cavalry"
-      material: "STICK"
+      material: "BOW"
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Cavalry that can use a bow and sword!"
@@ -390,8 +390,8 @@ team:
         - "§2[Ability]:§a Right click the wheat to mount your horse."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&5MAP: Helm's Deep"
-        - "&5TEAM: &2Rohan"
+        - "§5MAP: Helm's Deep"
+        - "§5TEAM: §2Rohan"
       location: 1
       command: "HelmsdeepRangedCavalry"
       map: "Helm's Deep"
