Split team kits into their own GUIs

--- a/ConwyCastleSiege/src/main/resources/maps.yml
+++ b/ConwyCastleSiege/src/main/resources/maps.yml
@@ -1333,7 +1333,7 @@ Firelands:
               z: 89
             sign_direction: west
     Attackers:
-      name: "Burning Crusade"
+      name: "Burning Legion"
       primary_color: "light_green"
       secondary_color: "dark_green"
       lobby:
