--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -355,9 +355,9 @@ premium:
         - "§cReturn to the previous interface."
       location: 49
       command: "kit selector"
-team:
-  name: "§2Team Kits"
-  key: "team"
+rohan:
+  name: "§2Rohan Kits"
+  key: "rohan"
   items:
     lancer:
       name: "§a§lCLASS:§r§a Lancer"
@@ -374,7 +374,7 @@ team:
         - "§6------------------------------"
         - "§5MAP: Helm's Deep"
         - "§5TEAM: §2Rohan"
-      location: 0
+      location: 21
       command: "HelmsdeepLancer"
     ranged_cavalry:
       name: "§a§lCLASS:§r§a Ranged Cavalry"
@@ -390,8 +390,19 @@ team:
         - "§6------------------------------"
         - "§5MAP: Helm's Deep"
         - "§5TEAM: §2Rohan"
-      location: 1
+      location: 23
       command: "HelmsdeepRangedCavalry"
+    back:
+      name: "§4§lGo Back"
+      material: "BARRIER"
+      lore:
+        - "§cReturn to the previous interface."
+      location: 49
+      command: "kit selector"
+uruk-hai:
+  name: "§2Uruk-Hai Kits"
+  key: "uruk-hai"
+  items:
     uruk_berserker:
       name: "§a§lCLASS:§r§a Uruk Berserker"
       material: "REDSTONE"
@@ -407,8 +418,19 @@ team:
         - "§6------------------------------"
         - "§5MAP: Helm's Deep"
         - "§5TEAM: §8Uruk-Hai"
-      location: 2
+      location: 22
       command: "HelmsdeepBerserker"
+    back:
+      name: "§4§lGo Back"
+      material: "BARRIER"
+      lore:
+        - "§cReturn to the previous interface."
+      location: 49
+      command: "kit selector"
+burning_legion:
+  name: "§2Burning Legion Kits"
+  key: "burning legion"
+  items:
     abbysal:
       name: "§a§lCLASS:§r§a Abyssal"
       material: "MAGMA_BLOCK"
@@ -424,8 +446,19 @@ team:
         - "§6------------------------------"
         - "§5MAP: Firelands"
         - "§5TEAM: §aBurning Legion"
-      location: 3
+      location: 22
       command: "firelandsabyssal"
+    back:
+      name: "§4§lGo Back"
+      material: "BARRIER"
+      lore:
+        - "§cReturn to the previous interface."
+      location: 49
+      command: "kit selector"
+orc:
+  name: "§2Orc Kits"
+  key: "the orcs"
+  items:
     moria_orc:
       name: "§a§lCLASS:§r§a Moria Orc"
       material: "BOW"
@@ -439,7 +472,7 @@ team:
         - "§6------------------------------"
         - "§5MAP: Moria"
         - "§5TEAM: §2The Orcs"
-      location: 4
+      location: 22
       command: "Moriaorc"
     back:
       name: "§4§lGo Back"
