--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -446,7 +446,29 @@ burning_legion:
         - "§6------------------------------"
         - "§5MAP: Firelands"
         - "§5TEAM: §aBurning Legion"
-      location: 22
+      location: 23
+      command: "firelandsabyssal"
+hellfire_guards:
+  name: "§5Hellfire Guards Kits"
+  key: "hellfire guards"
+  items:
+    abbysal:
+      name: "§a§lCLASS:§r§a Hellsteed"
+      material: "LEATHER_HORSE_ARMOR"
+      lore:
+        - "§6------------------------------"
+        - "§2[Desc]:§a A support horse that can stomp"
+        - "§2[Desc]:§a and carry teammates."
+        - "§2[Health]:§a 200"
+        - "§2[Melee Damage]:§a 10"
+        - "§2[Regen]:§a 7"
+        - "§2[Ability]:§a hit someone with stomp to stun enemies."
+        - "§2[Ability]:§a Carry around teammates."
+        - "§2[Status]:§a Unlocked with coins."
+        - "§6------------------------------"
+        - "§5MAP: Firelands"
+        - "§5TEAM: §5Hellfire Guards"
+      location: 21
       command: "firelandsabyssal"
     back:
       name: "§4§lGo Back"
