--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -128,7 +128,7 @@ commands:
     aliases: sui
   Bounty:
     description: Add a bounty to a player
-    usage: /bounty <player> <amount>
+    usage: /bounty <player> [amount]
 
   # Info
   CoinMultiplier:
