--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -44,7 +44,7 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a The standard ranged kit."
         - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 17.5"
+        - "§2[Melee Damage]:§a 33"
         - "§2[Ranged Damage]:§a 26"
         - "§2[Regen]:§a 4"
         - "§2[Status]:§a Free to play!"
@@ -58,8 +58,8 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit that can throw spears."
         - "§2[Health]:§a 190"
-        - "§2[Melee Damage]:§a 30.5"
-        - "§2[Ranged Damage]:§a 26"
+        - "§2[Melee Damage]:§a 40"
+        - "§2[Ranged Damage]:§a 36"
         - "§2[Regen]:§a 5"
         - "§2[Ability]:§a Spears can be thrown by right-clicking."
         - "§2[Status]:§a Free to play!"
@@ -73,7 +73,7 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a The standard melee kit."
         - "§2[Health]:§a 200"
-        - "§2[Melee Damage]:§a 21.5"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Regen]:§a 5.5"
         - "§2[Status]:§a Free to play!"
         - "§6------------------------------"
@@ -86,8 +86,8 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A slow archer that can put enemies on fire."
         - "§2[Health]:§a 140"
-        - "§2[Melee Damage]:§a 16.5"
-        - "§2[Ranged Damage]:§a 16"
+        - "§2[Melee Damage]:§a 26"
+        - "§2[Ranged Damage]:§a ??"
         - "§2[Regen]:§a 4"
         - "§2[Effects]:§a Slowness 1"
         - "§2[Ability]:§a Can put down a firepit. By clicking the"
@@ -103,7 +103,7 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A useful kit for climbing up walls."
         - "§2[Health]:§a 185"
-        - "§2[Melee Damage]:§a 20.5"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Regen]:§a 5"
         - "§2[Effects]:§a Jump Boost 2"
         - "§2[Status]:§a Voter kit."
@@ -117,7 +117,7 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A tank melee kit with a shield."
         - "§2[Health]:§a 190"
-        - "§2[Melee Damage]:§a 20.5"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Regen]:§a 6"
         - "§2[Effects]:§a Resistance 1, Slowness 1, Mining Fatigue 1"
         - "§2[Status]:§a Voter kit."
@@ -131,7 +131,7 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A very fast melee kit."
         - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 18.5"
+        - "§2[Melee Damage]:§a 34"
         - "§2[Regen]:§a 4"
         - "§2[Effects]:§a Speed 2, Jump Boost 1"
         - "§2[Status]:§a Voter kit."
@@ -145,7 +145,7 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A more mobile melee kit."
         - "§2[Health]:§a 185"
-        - "§2[Melee Damage]:§a 21.5"
+        - "§2[Melee Damage]:§a 37"
         - "§2[Regen]:§a 5"
         - "§2[Effects]:§a Speed 1, Jump Boost 1"
         - "§2[Status]:§a Voter kit."
@@ -170,7 +170,7 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a An armorless warrior with high dps and speed."
         - "§2[Health]:§a 110"
-        - "§2[Melee Damage]:§a 21.5"
+        - "§2[Melee Damage]:§a 37"
         - "§2[Regen]:§a 3"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Go berserk by drinking a potion, giving"
@@ -186,7 +186,7 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A warrior with the ability to charge."
         - "§2[Health]:§a 195"
-        - "§2[Melee Damage]:§a 21.5"
+        - "§2[Melee Damage]:§a 37"
         - "§2[Regen]:§a 6"
         - "§2[Effects]:§a Jump Boost 1"
         - "§2[Ability]:§a Charge at high speed and deal more damage on impact."
@@ -196,12 +196,12 @@ premium:
       command: "vanguard"
     executioner:
       name: "§a§lCLASS:§r§a Executioner"
-      material: "IRON_AXE"
+      material: "DIAMOND_AXE"
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to execute enemies."
         - "§2[Health]:§a 160"
-        - "§2[Melee Damage]:§a 24.5"
+        - "§2[Melee Damage]:§a 40"
         - "§2[Regen]:§a 5"
         - "§2[Ability]:§a Insta-kills enemies that are below 40% hp."
         - "§2[Status]:§a Unlocked with coins."
@@ -210,12 +210,12 @@ premium:
       command: "executioner"
     maceman:
       name: "§a§lCLASS:§r§a Maceman"
-      material: "IRON_SHOVEL"
+      material: "DIAMOND_SHOVEL"
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to stun enemies."
         - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 23"
+        - "§2[Melee Damage]:§a 38"
         - "§2[Regen]:§a 5"
         - "§2[Ability]:§a Hits enemies with extra force,"
         - "§2[Ability]:§a causing Blindness 2 and Slowness 2."
@@ -230,10 +230,10 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to ignore armor."
         - "§2[Health]:§a 195"
-        - "§2[Melee Damage]:§a 24.5"
+        - "§2[Melee Damage]:§a 30% of max health"
         - "§2[Regen]:§a 5"
         - "§2[Effects]:§a Slowness 1, Mining Fatigue 1"
-        - "§2[Ability]:§a Ignore the target's armor."
+        - "§2[Ability]:§a Deals % of max health"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
       location: 28
@@ -245,7 +245,7 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A tank kit that deals extra damage to mounted units."
         - "§2[Health]:§a 360"
-        - "§2[Melee Damage]:§a 28.5"
+        - "§2[Melee Damage]:§a 41"
         - "§2[Regen]:§a 14"
         - "§2[Effects]:§a Slowness 3, Mining Fatigue 4, Resistance 1"
         - "§2[Ability]:§a Deals 50% more damage to mounted units."
@@ -260,7 +260,7 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that heals allies."
         - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 17.5"
+        - "§2[Melee Damage]:§a 33"
         - "§2[Regen]:§a 6"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Heals allies on right-click with bandages."
@@ -276,7 +276,7 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that specializes in using tools."
         - "§2[Health]:§a 145"
-        - "§2[Melee Damage]:§a 18.5"
+        - "§2[Melee Damage]:§a 34"
         - "§2[Regen]:§a 4"
         - "§2[Effects]:§a Jump Boost 1"
         - "§2[Ability]:§a Can place traps and cobwebs, repair walls and wooden"
@@ -292,8 +292,8 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that specializes in using tools."
         - "§2[Health]:§a 140"
-        - "§2[Melee Damage]:§a 19"
-        - "§2[Ranged Damage]:§a 12"
+        - "§2[Melee Damage]:§a 34"
+        - "§2[Ranged Damage]:§a 27"
         - "§2[Regen]:§a 3.5"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Can shoot 3 arrows at once with the volley bow."
@@ -326,7 +326,7 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A basic mounted kit."
         - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 19.5"
+        - "§2[Melee Damage]:§a 35"
         - "§2[Regen]:§a 5"
         - "§2[Ability]:§a Right click the wheat to mount your horse."
         - "§2[Status]:§a Unlocked with coins."
@@ -340,7 +340,7 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A special kit where you play as a wolf."
         - "§2[Health]:§a 90"
-        - "§2[Melee Damage]:§a 14.5"
+        - "§2[Melee Damage]:§a 30"
         - "§2[Regen]:§a 3"
         - "§2[Effects]:§a Speed 4, Jump Boost 1, Resistance 1, Night Vision 1"
         - "§2[Ability]:§a Slow down enemies and make them bleed."
