Added /bounties and nerfed bounties and reduced the bounty message length

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -180,6 +180,11 @@ commands:
   TopKills:
     description: Shows the kills leaderboard
     usage: /topkills <position>
+  Bounties:
+    description: Shows the bounties leaderboard
+    usage: /bounties <position>
+    aliases:
+      - topbounty
 
 
   # Staff - Punishments
