--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -134,6 +134,7 @@ free:
         - "§2[Melee Damage]:§a 34"
         - "§2[Regen]:§a 4"
         - "§2[Effects]:§a Speed 2, Jump Boost 1"
+        - "§2[Effects]:§a Haste 2"
         - "§2[Status]:§a Voter kit."
         - "§6------------------------------"
       location: 37
@@ -148,6 +149,7 @@ free:
         - "§2[Melee Damage]:§a 37"
         - "§2[Regen]:§a 5"
         - "§2[Effects]:§a Speed 1, Jump Boost 1"
+        - "§2[Effects]:§a Haste 2"
         - "§2[Status]:§a Voter kit."
         - "§6------------------------------"
       location: 43
@@ -188,7 +190,7 @@ premium:
         - "§2[Health]:§a 195"
         - "§2[Melee Damage]:§a 37"
         - "§2[Regen]:§a 6"
-        - "§2[Effects]:§a Jump Boost 1"
+        - "§2[Effects]:§a Jump Boost 1, Haste 2"
         - "§2[Ability]:§a Charge at high speed and deal more damage on impact."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -200,9 +202,9 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to execute enemies."
-        - "§2[Health]:§a 160"
+        - "§2[Health]:§a 150"
         - "§2[Melee Damage]:§a 40"
-        - "§2[Regen]:§a 5"
+        - "§2[Regen]:§a 7"
         - "§2[Ability]:§a Insta-kills enemies that are below 40% hp."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -215,10 +217,10 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to stun enemies."
         - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 38"
-        - "§2[Regen]:§a 5"
+        - "§2[Melee Damage]:§a 33"
+        - "§2[Regen]:§a 7"
         - "§2[Ability]:§a Hits enemies with extra force,"
-        - "§2[Ability]:§a causing Blindness 2 and Slowness 2."
+        - "§2[Ability]:§a causing Blindness 2 and more."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
       location: 16
@@ -244,10 +246,10 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A tank kit that deals extra damage to mounted units."
-        - "§2[Health]:§a 360"
+        - "§2[Health]:§a 320"
         - "§2[Melee Damage]:§a 41"
-        - "§2[Regen]:§a 14"
-        - "§2[Effects]:§a Slowness 3, Mining Fatigue 4, Resistance 1"
+        - "§2[Regen]:§a 16"
+        - "§2[Effects]:§a Slowness 3, Mining Fatigue 2, Resistance 1"
         - "§2[Ability]:§a Deals 50% more damage to mounted units."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -259,9 +261,9 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that heals allies."
-        - "§2[Health]:§a 130"
+        - "§2[Health]:§a 110"
         - "§2[Melee Damage]:§a 33"
-        - "§2[Regen]:§a 6"
+        - "§2[Regen]:§a 8"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Heals allies on right-click with bandages."
         - "§2[Ability]:§a Can place cakes on the ground to heal allies."
@@ -278,7 +280,7 @@ premium:
         - "§2[Health]:§a 145"
         - "§2[Melee Damage]:§a 34"
         - "§2[Regen]:§a 4"
-        - "§2[Effects]:§a Jump Boost 1"
+        - "§2[Effects]:§a Jump Boost 1, haste 1"
         - "§2[Ability]:§a Can place traps and cobwebs, repair walls and wooden"
         - "§2[Ability]:§a structures, refill catapults, and operate ballistae."
         - "§2[Status]:§a Unlocked with coins."
@@ -295,7 +297,7 @@ premium:
         - "§2[Melee Damage]:§a 34"
         - "§2[Ranged Damage]:§a 27"
         - "§2[Regen]:§a 3.5"
-        - "§2[Effects]:§a Speed 1"
+        - "§2[Effects]:§a Speed 1, haste 1"
         - "§2[Ability]:§a Can shoot 3 arrows at once with the volley bow."
         - "§2[Ability]:§a Can shoot 3 consecutive arrows with the burst bow."
         - "§2[Ability]:§a Can insta-kill enemies by backstabbing them."
@@ -340,8 +342,8 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A special kit where you play as a wolf."
         - "§2[Health]:§a 90"
-        - "§2[Melee Damage]:§a 30"
-        - "§2[Regen]:§a 3"
+        - "§2[Melee Damage]:§a 25"
+        - "§2[Regen]:§a 7"
         - "§2[Effects]:§a Speed 4, Jump Boost 1, Resistance 1, Night Vision 1"
         - "§2[Ability]:§a Slow down enemies and make them bleed."
         - "§2[Status]:§a Unlocked with coins."
