--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -534,12 +534,12 @@ thunderstoneGuard:
       material: "ELYTRA"
       lore:
         - "§6------------------------------"
-        - "§2[Desc]:§a A melee unit with the ability to glide"
-        - "§2[Health]:§a 160"
-        - "§2[Melee Damage]:§a 26"
+        - "§2[Desc]:§a Flying unit with healing/explosive support"
+        - "§2[Health]:§a 130"
+        - "§2[Melee Damage]:§a 20"
         - "§2[Regen]:§a 5"
         - "§2[Effects]:§a Slow falling, haste and speed"
-        - "§2[Ability]:§a Can drop a bom and can glide in the air!"
+        - "§2[Ability]:§a Can drop 3 boms, health package, glide in the air!"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
         - "§5MAP: Thunderstone"
