You now need to own kits in order to play them!

--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -32,7 +32,7 @@ selector:
       lore:
         - "Unlock kits here!"
       location: 40
-      command: "kit shop"
+      command: "buy"
 free:
   name: "§2Free Kits"
   key: "free"
