--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -301,6 +301,12 @@ commands:
     permission: castlesiege.moderator
     permission-message: You are not permitted to use this command!
 
+  # Donations
+  UnlockedKit:
+    description: Disables/Enables non-forceful switching
+    usage: /Unlockedkit [Player Name] [add/remove] [Kit Name] [Time]
+    permission: castlesiege.developer
+    permission-message: You are not permitted to use this command!
   # Kits
   Kit:
     description: Open the GUI for selecting kits
